@@ -8,21 +8,22 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
+import org.seng302.leftovers.dto.business.BusinessType;
+import org.seng302.leftovers.dto.inventory.InventoryItemResponseDTO;
+import org.seng302.leftovers.dto.product.ProductResponseDTO;
+import org.seng302.leftovers.exceptions.ValidationResponseException;
 import org.seng302.leftovers.persistence.BusinessRepository;
 import org.seng302.leftovers.persistence.InventoryItemRepository;
 import org.seng302.leftovers.persistence.ProductRepository;
 import org.seng302.leftovers.persistence.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
-import org.springframework.http.HttpStatus;
 import org.springframework.orm.ObjectOptimisticLockingFailureException;
-import org.springframework.web.server.ResponseStatusException;
 
 import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.time.format.DateTimeParseException;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -39,6 +40,9 @@ class InventoryItemTests {
     ProductRepository productRepository;
     @Autowired
     InventoryItemRepository inventoryItemRepository;
+
+    @Autowired
+    private ObjectMapper objectMapper;
 
     private Business testBusiness;
     private Product testProduct;
@@ -61,7 +65,7 @@ class InventoryItemTests {
                 .build();
         testUser = userRepository.save(testUser);
         testBusiness = new Business.Builder()
-                .withBusinessType("Accommodation and Food Services")
+                .withBusinessType(BusinessType.ACCOMMODATION_AND_FOOD_SERVICES)
                 .withAddress(Location.covertAddressStringToLocation("4,Rountree Street,Ashburton,Christchurch,New Zealand," +
                         "Canterbury,8041"))
                 .withDescription("Some description")
@@ -85,9 +89,9 @@ class InventoryItemTests {
                 .withQuantity(3)
                 .withPricePerItem("2.69")
                 .withManufactured("2021-03-11")
-                .withSellBy(LocalDate.now().plusWeeks(1).toString())
-                .withBestBefore(LocalDate.now().plusWeeks(2).toString())
-                .withExpires(LocalDate.now().plusWeeks(3).toString())
+                .withSellBy(LocalDate.now().plusWeeks(1))
+                .withBestBefore(LocalDate.now().plusWeeks(2))
+                .withExpires(LocalDate.now().plusWeeks(3))
                 .build();
         testInvItem = inventoryItemRepository.save(invItem);
     }
@@ -114,9 +118,9 @@ class InventoryItemTests {
                 .withQuantity(3)
                 .withPricePerItem("2.69")
                 .withManufactured("2021-03-11")
-                .withSellBy(today.plus(2, ChronoUnit.DAYS).toString())
-                .withBestBefore(today.plus(3, ChronoUnit.DAYS).toString())
-                .withExpires(today.plus(4, ChronoUnit.DAYS).toString())
+                .withSellBy(today.plus(2, ChronoUnit.DAYS))
+                .withBestBefore(today.plus(3, ChronoUnit.DAYS))
+                .withExpires(today.plus(4, ChronoUnit.DAYS))
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -127,7 +131,7 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -138,58 +142,44 @@ class InventoryItemTests {
     */
 
     @Test
-    void createInventoryItem_withNullProduct_exceptionThrown() throws Exception {
-        try {
-            InventoryItem invItem = new InventoryItem.Builder()
-                    .withProduct(null)
-                    .withQuantity(2)
-                    .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                    .build();
-            // fail();
-        } catch (ResponseStatusException e) {
-            assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
-            assertEquals("No product was provided", e.getReason());
-        } catch (Exception e) { fail(); }
+    void createInventoryItem_withNullProduct_exceptionThrown() {
+        var invItemBuilder = new InventoryItem.Builder()
+                .withProduct(null)
+                .withQuantity(2)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
+        var exception = assertThrows(ValidationResponseException.class, invItemBuilder::build);
+        assertEquals("No product was provided", exception.getMessage());
+    }
+
+    @Test
+    void createInventoryItem_withNullExpires_exceptionThrown() {
+        var invItemBuilder = new InventoryItem.Builder()
+                .withProduct(testProduct)
+                .withQuantity(2)
+                .withExpires((LocalDate) null);
+        var exception = assertThrows(ValidationResponseException.class, invItemBuilder::build);
+        assertEquals("No expiry date was provided", exception.getMessage());
     }
     @Test
-    void createInventoryItem_withNullExpires_exceptionThrown() throws Exception {
-        try {
-            InventoryItem invItem = new InventoryItem.Builder()
-                    .withProduct(testProduct)
-                    .withQuantity(1)
-                    .withExpires(null)
-                    .build();
-        } catch (ResponseStatusException e) {
-            assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
-            assertEquals("No expiry date was provided", e.getReason());
-        } catch (Exception e) { fail(); }
+    void createInventoryItem_withZeroQuantity_exceptionThrown() {
+        var invItemBuilder = new InventoryItem.Builder()
+                .withProduct(testProduct)
+                .withQuantity(0)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
+        var exception = assertThrows(ValidationResponseException.class, invItemBuilder::build);
+        assertEquals("A quantity less than 1 was provided", exception.getMessage());
     }
+
     @Test
-    void createInventoryItem_withZeroQuantity_exceptionThrown() throws Exception {
-        try {
-            InventoryItem invItem = new InventoryItem.Builder()
-                    .withProduct(testProduct)
-                    .withQuantity(0)
-                    .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                    .build();
-        } catch (ResponseStatusException e) {
-            assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
-            assertEquals("A quantity less than 1 was provided", e.getReason());
-        } catch (Exception e) { fail(); }
+    void createInventoryItem_withNegativeQuantity_exceptionThrown() {
+        var invItemBuilder = new InventoryItem.Builder()
+                .withProduct(testProduct)
+                .withQuantity(-69)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
+        var exception = assertThrows(ValidationResponseException.class, invItemBuilder::build);
+        assertEquals("A quantity less than 1 was provided", exception.getMessage());
     }
-    @Test
-    void createInventoryItem_withNegativeQuantity_exceptionThrown() throws Exception {
-        try {
-            InventoryItem invItem = new InventoryItem.Builder()
-                    .withProduct(testProduct)
-                    .withQuantity(-69)
-                    .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                    .build();
-        } catch (ResponseStatusException e) {
-            assertEquals(HttpStatus.BAD_REQUEST, e.getStatus());
-            //assertEquals("A quantity less than 1 was provided", e.getReason());
-        } catch (Exception e) { fail(); }
-    }
+
     /**
      * The following test section will test attributes related to price which is 
      * Price per item, Total price
@@ -202,8 +192,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                .withPricePerItem(null)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
+                .withPricePerItem((BigDecimal) null)
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -214,9 +204,9 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                .withPricePerItem(null)
-                .withTotalPrice(null)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
+                .withPricePerItem((BigDecimal) null)
+                .withTotalPrice((BigDecimal) null)
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -227,8 +217,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                .withTotalPrice(null)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
+                .withTotalPrice((BigDecimal) null)
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -239,7 +229,7 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .withPricePerItem("2.69")
                 .build();
         inventoryItemRepository.save(invItem);
@@ -251,7 +241,7 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .withTotalPrice("21.69")
                 .build();
         inventoryItemRepository.save(invItem);
@@ -263,8 +253,8 @@ class InventoryItemTests {
         InventoryItem.Builder builder = new InventoryItem.Builder()
         .withProduct(testProduct)
         .withQuantity(2)
-        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString());
-        assertThrows(ResponseStatusException.class, () -> {
+        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
+        assertThrows(ValidationResponseException.class, () -> {
             builder.withPricePerItem("xx0.1");
         });
     }
@@ -273,8 +263,8 @@ class InventoryItemTests {
         InventoryItem.Builder builder = new InventoryItem.Builder()
         .withProduct(testProduct)
         .withQuantity(2)
-        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString());
-        assertThrows(ResponseStatusException.class, () -> {
+        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
+        assertThrows(ValidationResponseException.class, () -> {
             builder.withTotalPrice("xx0.1");
         });
     }
@@ -284,9 +274,9 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
             .withProduct(testProduct)
             .withQuantity(2)
-            .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+            .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
             .build();
-        assertThrows(ResponseStatusException.class, () -> {
+        assertThrows(ValidationResponseException.class, () -> {
             invItem.setPricePerItem(value);
         });
     }
@@ -296,9 +286,9 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
         .withProduct(testProduct)
         .withQuantity(2)
-        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
         .build();
-        assertThrows(ResponseStatusException.class, () -> {
+        assertThrows(ValidationResponseException.class, () -> {
             invItem.setTotalPrice(value);
         });
     }
@@ -307,8 +297,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                .withManufactured(null)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
+                .withManufactured((LocalDate) null)
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -321,8 +311,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
         .withProduct(testProduct)
         .withQuantity(2)
-        .withManufactured(acceptDate.toString())
-        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+        .withManufactured(acceptDate)
+        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
         .build();
         assertNotNull(invItem);
     }
@@ -331,16 +321,16 @@ class InventoryItemTests {
         InventoryItem.Builder builder = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .withManufactured("2022-03-03");
-        assertThrows(ResponseStatusException.class, builder::build);
+        assertThrows(ValidationResponseException.class, builder::build);
     }
     @Test
     void createInventoryItem_withInvalidManufacturedFormat_objectNotCreated() {
         InventoryItem.Builder builder = new InventoryItem.Builder()
             .withProduct(testProduct)
             .withQuantity(2)
-            .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString());
+            .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
 
         assertThrows(DateTimeParseException.class, () -> {
             builder.withManufactured("201x-09-09");
@@ -351,8 +341,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                .withSellBy(null)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
+                .withSellBy((LocalDate) null)
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -363,9 +353,9 @@ class InventoryItemTests {
         InventoryItem.Builder builder = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .withSellBy("2000-03-03");
-        assertThrows(ResponseStatusException.class, builder::build);
+        assertThrows(ValidationResponseException.class, builder::build);
     }
     @Test
     void createInventoryItem_withDateInFutureForSellBy_objectCreated() throws Exception {
@@ -374,8 +364,8 @@ class InventoryItemTests {
         InventoryItem builder = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withSellBy(acceptDate.toString())
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withSellBy(acceptDate)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         assertNotNull(builder);
     }
@@ -384,7 +374,7 @@ class InventoryItemTests {
         InventoryItem.Builder builder = new InventoryItem.Builder()
             .withProduct(testProduct)
             .withQuantity(2)
-            .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString());
+            .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
 
         assertThrows(DateTimeParseException.class, () -> {
             builder.withSellBy("20x-01-01");
@@ -395,8 +385,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
-                .withBestBefore(null)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
+                .withBestBefore((LocalDate) null)
                 .build();
         inventoryItemRepository.save(invItem);
         InventoryItem testInvItem = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
@@ -407,9 +397,9 @@ class InventoryItemTests {
         InventoryItem.Builder builder = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .withBestBefore("2000-03-03");
-        assertThrows(ResponseStatusException.class, builder::build);
+        assertThrows(ValidationResponseException.class, builder::build);
     }
     @Test
     void createInventoryItem_withDateInFutureForBestBefore_objectCreated() throws Exception {
@@ -418,8 +408,8 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withBestBefore(acceptDate.toString())
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withBestBefore(acceptDate)
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         
         assertNotNull(invItem);
@@ -429,7 +419,7 @@ class InventoryItemTests {
         InventoryItem.Builder invItem = new InventoryItem.Builder()
         .withProduct(testProduct)
         .withQuantity(2)
-        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString());
+        .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS));
 
         assertThrows(DateTimeParseException.class, () -> {
         invItem 
@@ -441,17 +431,17 @@ class InventoryItemTests {
         InventoryItem invItem1 = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(2)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         InventoryItem invItem2 = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(3)
-                .withExpires(LocalDate.now().plus(100, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(100, ChronoUnit.DAYS))
                 .build();
         InventoryItem invItem3 = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(4)
-                .withExpires(LocalDate.now().plus(150, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(150, ChronoUnit.DAYS))
                 .build();
         inventoryItemRepository.save(invItem1);
         inventoryItemRepository.save(invItem2);
@@ -465,31 +455,33 @@ class InventoryItemTests {
     }
 
     @Test
-    void constructJSONObject_noNullAttributes_returnsExpectedJson() throws Exception {
+    void inventoryItemDTO_noNullAttributes_returnsExpectedJson() throws Exception {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(3)
                 .withPricePerItem("2.69")
                 .withTotalPrice("5.32")
                 .withManufactured("2021-03-11")
-                .withSellBy(LocalDate.now().plus(10, ChronoUnit.DAYS).toString())
-                .withBestBefore(LocalDate.now().plus(20, ChronoUnit.DAYS).toString())
-                .withExpires(LocalDate.now().plus(30, ChronoUnit.DAYS).toString())
+                .withSellBy(LocalDate.now().plus(10, ChronoUnit.DAYS))
+                .withBestBefore(LocalDate.now().plus(20, ChronoUnit.DAYS))
+                .withExpires(LocalDate.now().plus(30, ChronoUnit.DAYS))
                 .build();
         invItem = inventoryItemRepository.save(invItem);
         JSONObject expectedJson = new JSONObject();
         expectedJson.put("id", invItem.getId());
-        expectedJson.put("product", invItem.getProduct().constructJSONObject());
+        expectedJson.put("product", new ProductResponseDTO(invItem.getProduct()));
         expectedJson.put("quantity", invItem.getQuantity());
         expectedJson.put("remainingQuantity", invItem.getRemainingQuantity());
         expectedJson.put("pricePerItem", invItem.getPricePerItem());
         expectedJson.put("totalPrice", invItem.getTotalPrice());
-        expectedJson.put("manufactured", invItem.getManufactured().toString());
-        expectedJson.put("sellBy", invItem.getSellBy().toString());
-        expectedJson.put("bestBefore", invItem.getBestBefore().toString());
-        expectedJson.put("expires", invItem.getExpires().toString());
-        ObjectMapper mapper = new ObjectMapper();
-        assertEquals(mapper.readTree(expectedJson.toJSONString()), mapper.readTree(invItem.constructJSONObject().toJSONString()));
+        expectedJson.put("manufactured", invItem.getManufactured());
+        expectedJson.put("sellBy", invItem.getSellBy());
+        expectedJson.put("bestBefore", invItem.getBestBefore());
+        expectedJson.put("expires", invItem.getExpires());
+        assertEquals(
+                objectMapper.readTree(objectMapper.writeValueAsString(expectedJson)),
+                objectMapper.readTree(objectMapper.writeValueAsString(new InventoryItemResponseDTO(invItem)))
+        );
     }
 
     @Test
@@ -497,17 +489,18 @@ class InventoryItemTests {
         InventoryItem invItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(3)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         invItem = inventoryItemRepository.save(invItem);
         JSONObject expectedJson = new JSONObject();
         expectedJson.put("id", invItem.getId());
-        expectedJson.put("product", invItem.getProduct().constructJSONObject());
+        expectedJson.put("product", new ProductResponseDTO(invItem.getProduct()));
         expectedJson.put("quantity", invItem.getQuantity());
         expectedJson.put("remainingQuantity", invItem.getRemainingQuantity());
-        expectedJson.put("expires", invItem.getExpires().toString());
+        expectedJson.put("expires", invItem.getExpires());
         ObjectMapper mapper = new ObjectMapper();
-        assertEquals(mapper.readTree(expectedJson.toJSONString()), mapper.readTree(invItem.constructJSONObject().toJSONString()));
+        assertEquals(mapper.readTree(objectMapper.writeValueAsString(expectedJson)),
+                mapper.readTree(objectMapper.writeValueAsString(new InventoryItemResponseDTO(invItem))));
     }
 
     @Test
@@ -515,7 +508,7 @@ class InventoryItemTests {
         InventoryItem originalItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(3)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         originalItem = inventoryItemRepository.save(originalItem);
 
@@ -535,7 +528,7 @@ class InventoryItemTests {
         InventoryItem originalItem = new InventoryItem.Builder()
                 .withProduct(testProduct)
                 .withQuantity(3)
-                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS).toString())
+                .withExpires(LocalDate.now().plus(50, ChronoUnit.DAYS))
                 .build();
         originalItem = inventoryItemRepository.save(originalItem);
 
@@ -555,73 +548,74 @@ class InventoryItemTests {
      * Creates a valid manufactured, sell by, best before and expires date.
      * @return a list containing the four generated valid dates.
      */
-    public List<String> generateValidDates() {
-        String manufactured = LocalDate.now().minusYears(1).toString();
-        String sellBy = LocalDate.now().plusYears(1).toString();
-        String bestBefore = LocalDate.now().plusYears(2).toString();
-        String expires = LocalDate.now().plusYears(3).toString();
-        List<String> dates = Arrays.asList(manufactured, sellBy, bestBefore, expires);
-        return dates;
+    public List<LocalDate> generateValidDates() {
+        var today = LocalDate.now();
+        return List.of(
+                today.minusYears(1), // Manufactured
+                today.plusYears(1),  // Sell by
+                today.plusYears(2),  // Best before
+                today.plusYears(3)   // Expires
+        );
     }
 
     // Basic date setting
     @Test
     void modifyInventoryItem_changeAllDatesToValidDate_allDatesChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         invItem.setDates(dates.get(0), dates.get(1), dates.get(2), dates.get(3));
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
-        assertEquals(invItemRepo.getManufactured().toString(), dates.get(0));
-        assertEquals(invItemRepo.getSellBy().toString(), dates.get(1));
-        assertEquals(invItemRepo.getBestBefore().toString(), dates.get(2));
-        assertEquals(invItemRepo.getExpires().toString(), dates.get(3));
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
+        assertEquals(invItemRepo.getManufactured(), dates.get(0));
+        assertEquals(invItemRepo.getSellBy(), dates.get(1));
+        assertEquals(invItemRepo.getBestBefore(), dates.get(2));
+        assertEquals(invItemRepo.getExpires(), dates.get(3));
     }
 
     // Null testing
     @Test
     void modifyInventoryItem_changeManufacturedToNull_manufacturedDateSetToNull() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         invItem.setDates(null, dates.get(1), dates.get(2), dates.get(3));
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertNull(invItemRepo.getManufactured());
-        assertEquals(dates.get(1), invItemRepo.getSellBy().toString());
-        assertEquals(dates.get(2), invItemRepo.getBestBefore().toString());
-        assertEquals(dates.get(3), invItemRepo.getExpires().toString());
+        assertEquals(dates.get(1), invItemRepo.getSellBy());
+        assertEquals(dates.get(2), invItemRepo.getBestBefore());
+        assertEquals(dates.get(3), invItemRepo.getExpires());
     }
 
     @Test
     void modifyInventoryItem_changeSellByToNull_sellByDateSetToNull() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         invItem.setDates(dates.get(0), null, dates.get(2), dates.get(3));
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
-        assertEquals(dates.get(0), invItemRepo.getManufactured().toString());
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
+        assertEquals(dates.get(0), invItemRepo.getManufactured());
         assertNull(invItemRepo.getSellBy());
-        assertEquals(dates.get(2), invItemRepo.getBestBefore().toString());
-        assertEquals(dates.get(3), invItemRepo.getExpires().toString());
+        assertEquals(dates.get(2), invItemRepo.getBestBefore());
+        assertEquals(dates.get(3), invItemRepo.getExpires());
     }
 
     @Test
     void modifyInventoryItem_changeBestBeforeToNull_bestBeforeDateSetToNull() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         invItem.setDates(dates.get(0), dates.get(1), null, dates.get(3));
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
-        assertEquals(dates.get(0), invItemRepo.getManufactured().toString());
-        assertEquals(dates.get(1), invItemRepo.getSellBy().toString());
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
+        assertEquals(dates.get(0), invItemRepo.getManufactured());
+        assertEquals(dates.get(1), invItemRepo.getSellBy());
         assertNull(invItemRepo.getBestBefore());
-        assertEquals(dates.get(3), invItemRepo.getExpires().toString());
+        assertEquals(dates.get(3), invItemRepo.getExpires());
     }
 
     @Test
     void modifyInventoryItem_changeExpiresToNull_ExceptionThrownAndExpiresDateNotSetToNull() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalManufactured = invItem.getManufactured();
         LocalDate originalSellBy = invItem.getSellBy();
         LocalDate originalBestBefore = invItem.getBestBefore();
@@ -631,9 +625,9 @@ class InventoryItemTests {
         var sellBy = dates.get(1);
         var bestBefore = dates.get(2);
 
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, sellBy, bestBefore, null));
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, sellBy, bestBefore, null));
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(originalManufactured, invItemRepo.getManufactured());
         assertEquals(originalSellBy, invItemRepo.getSellBy());
         assertEquals(originalBestBefore, invItemRepo.getBestBefore());
@@ -642,29 +636,29 @@ class InventoryItemTests {
 
     @Test
     void modifyInventoryItem_changeManufacturedSellByAndBestBeforeDatesToNull_respectiveDatesSetToNull() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         invItem.setDates(null, null, null, dates.get(3));
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertNull(invItemRepo.getManufactured());
         assertNull(invItemRepo.getSellBy());
         assertNull(invItemRepo.getBestBefore());
-        assertEquals(dates.get(3), invItemRepo.getExpires().toString());
+        assertEquals(dates.get(3), invItemRepo.getExpires());
     }
 
     @Test
     void modifyInventoryItem_changeAllDatesToNull_noDatesSetToNull() throws Exception {
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalManufactured = invItem.getManufactured();
         LocalDate originalSellBy = invItem.getSellBy();
         LocalDate originalBestBefore = invItem.getBestBefore();
         LocalDate originalExpires = invItem.getExpires();
-        assertThrows(ResponseStatusException.class, () -> {
+        assertThrows(ValidationResponseException.class, () -> {
             invItem.setDates(null, null, null, null);
         });
         inventoryItemRepository.save(invItem);
-        InventoryItem invItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        InventoryItem invItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(invItemRepo.getManufactured(), originalManufactured);
         assertEquals(invItemRepo.getSellBy(), originalSellBy);
         assertEquals(invItemRepo.getBestBefore(), originalBestBefore);
@@ -674,166 +668,203 @@ class InventoryItemTests {
     // Checking against today's date
     @Test
     void modifyInventoryItem_changeManufacturedToDayAfterToday_exceptionThrownAndManufacturedDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalManufactured = invItem.getManufactured();
-        var manufacturedAfterToday = LocalDate.now().plusDays(1).toString();
+        var manufacturedAfterToday = LocalDate.now().plusDays(1);
         var sellBy = dates.get(1);
         var bestBefore = dates.get(2);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufacturedAfterToday, sellBy, bestBefore, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufacturedAfterToday, sellBy, bestBefore, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getManufactured(), originalManufactured);
     }
 
     @Test
     void modifyInventoryItem_changeManufacturedToTenYearsAfterToday_exceptionThrownAndManufacturedDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalManufactured = invItem.getManufactured();
-        var manufacturedAfterToday = LocalDate.now().plusYears(10).toString();
+        var manufacturedAfterToday = LocalDate.now().plusYears(10);
         var sellBy = dates.get(1);
         var bestBefore = dates.get(2);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufacturedAfterToday, sellBy, bestBefore, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufacturedAfterToday, sellBy, bestBefore, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getManufactured(), originalManufactured);
     }
 
     @Test
     void modifyInventoryItem_changeSellByToDayBeforeToday_exceptionThrownAndSellByDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalSellBy = invItem.getSellBy();
-        var sellByBeforeToday = LocalDate.now().minusDays(1).toString();
+        var sellByBeforeToday = LocalDate.now().minusDays(1);
         var manufactured = dates.get(0);
         var bestBefore = dates.get(2);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, sellByBeforeToday, bestBefore, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, sellByBeforeToday, bestBefore, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getSellBy(), originalSellBy);
     }
 
     @Test
     void modifyInventoryItem_changeSellByToTenYearsBeforeToday_exceptionThrownAndSellByDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalSellBy = invItem.getSellBy();
-        var sellByBeforeToday = LocalDate.now().minusYears(10).toString();
+        var sellByBeforeToday = LocalDate.now().minusYears(10);
         var manufactured = dates.get(0);
         var bestBefore = dates.get(2);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, sellByBeforeToday, bestBefore, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, sellByBeforeToday, bestBefore, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getSellBy(), originalSellBy);
     }
 
     @Test
     void modifyInventoryItem_changeBestBeforeToDayBeforeToday_exceptionThrownAndBestBeforeDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalBestBefore = invItem.getBestBefore();
-        var bestBeforeBeforeToday = LocalDate.now().minusDays(1).toString();
+        var bestBeforeBeforeToday = LocalDate.now().minusDays(1);
         var manufactured = dates.get(0);
         var sellBy = dates.get(1);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, sellBy, bestBeforeBeforeToday, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, sellBy, bestBeforeBeforeToday, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getBestBefore(), originalBestBefore);
     }
 
     @Test
     void modifyInventoryItem_changeBestBeforeToTenYearsBeforeToday_exceptionThrownAndBestBeforeDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalBestBefore = invItem.getBestBefore();
-        var bestBeforeBeforeToday = LocalDate.now().minusYears(10).toString();
+        var bestBeforeBeforeToday = LocalDate.now().minusYears(10);
         var manufactured = dates.get(0);
         var sellBy = dates.get(1);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, sellBy, bestBeforeBeforeToday, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, sellBy, bestBeforeBeforeToday, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getBestBefore(), originalBestBefore);
     }
 
     @Test
     void modifyInventoryItem_changeExpiresToDayBeforeToday_exceptionThrownAndExpiresDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalExpires = invItem.getExpires();
-        var expiresBeforeToday = LocalDate.now().minusDays(1).toString();
+        var expiresBeforeToday = LocalDate.now().minusDays(1);
         var manufactured = dates.get(0);
         var sellBy = dates.get(1);
         var bestBefore = dates.get(2);
-        assertThrows(ResponseStatusException.class, () -> {
+        assertThrows(ValidationResponseException.class, () -> {
             invItem.setDates(manufactured, sellBy, bestBefore, expiresBeforeToday);
         });
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getExpires(), originalExpires);
     }
 
     @Test
     void modifyInventoryItem_changeExpiresToTenYearsBeforeToday_exceptionThrownAndExpiresDateNotChanged() throws Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalExpires = invItem.getExpires();
-        var expiresBeforeToday = LocalDate.now().minusYears(10).toString();
+        var expiresBeforeToday = LocalDate.now().minusYears(10);
         var manufactured = dates.get(0);
         var sellBy = dates.get(1);
         var bestBefore = dates.get(2);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, sellBy, bestBefore, expiresBeforeToday));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, sellBy, bestBefore, expiresBeforeToday));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getExpires(), originalExpires);
     }
 
     // Comparing dates against each other
     @Test
     void modifyInventoryItem_changeSellByToBeAfterBestBefore_exceptionThrownAndNoDatesChanged() throws  Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalSellBy = invItem.getSellBy();
         LocalDate originalBestBefore = invItem.getBestBefore();
-        var newSellBy = LocalDate.now().plusDays(12).toString();
-        var newBestBefore = LocalDate.now().plusDays(11).toString();
+        var newSellBy = LocalDate.now().plusDays(12);
+        var newBestBefore = LocalDate.now().plusDays(11);
         var manufactured = dates.get(0);
         var expires = dates.get(3);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, newSellBy, newBestBefore, expires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, newSellBy, newBestBefore, expires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getSellBy(), originalSellBy);
         assertEquals(inventoryItemRepo.getBestBefore(), originalBestBefore);
     }
 
     @Test
     void modifyInventoryItem_changeBestBeforeToBeAfterExpires_exceptionThrownAndNoDatesChanged() throws  Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalBestBefore = invItem.getBestBefore();
         LocalDate originalExpires = invItem.getExpires();
-        var newBestBefore = LocalDate.now().plusDays(12).toString();
-        var newExpires = LocalDate.now().plusDays(11).toString();
+        var newBestBefore = LocalDate.now().plusDays(12);
+        var newExpires = LocalDate.now().plusDays(11);
         var manufactured = dates.get(0);
         var sellBy = dates.get(1);
-        assertThrows(ResponseStatusException.class, () -> {
+        assertThrows(ValidationResponseException.class, () -> {
             invItem.setDates(manufactured, sellBy, newBestBefore, newExpires);
         });
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getBestBefore(), originalBestBefore);
         assertEquals(inventoryItemRepo.getExpires(), originalExpires);
     }
 
     @Test
     void modifyInventoryItem_changeSellByToBeAfterExpires_exceptionThrownAndNoDatesChanged() throws  Exception {
-        List<String> dates = generateValidDates();
-        InventoryItem invItem = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, testInvItem.getId());
+        var dates = generateValidDates();
+        InventoryItem invItem = inventoryItemRepository.findById(testInvItem.getId()).orElseThrow();
         LocalDate originalSellBy = invItem.getSellBy();
         LocalDate originalExpires = invItem.getExpires();
-        var newSellBy = LocalDate.now().plusDays(12).toString();
-        var newExpires = LocalDate.now().plusDays(11).toString();
+        var newSellBy = LocalDate.now().plusDays(12);
+        var newExpires = LocalDate.now().plusDays(11);
         var manufactured = dates.get(0);
         var bestBefore = dates.get(2);
-        assertThrows(ResponseStatusException.class, () -> invItem.setDates(manufactured, newSellBy, bestBefore, newExpires));
-        InventoryItem inventoryItemRepo = inventoryItemRepository.getInventoryItemByBusinessAndId(testBusiness, invItem.getId());
+        assertThrows(ValidationResponseException.class, () -> invItem.setDates(manufactured, newSellBy, bestBefore, newExpires));
+        InventoryItem inventoryItemRepo = inventoryItemRepository.findById(invItem.getId()).orElseThrow();
         assertEquals(inventoryItemRepo.getSellBy(), originalSellBy);
         assertEquals(inventoryItemRepo.getExpires(), originalExpires);
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {0, -1, -3000})
+    void sellQuantity_saleQuantityLessThanZero_validationExceptionThrown(int saleQuantity) {
+        var exception = assertThrows(ValidationResponseException.class, () -> testInvItem.sellQuantity(saleQuantity));
+        assertEquals("Quantity sold must be at least 1", exception.getMessage());
+    }
+
+    @Test
+    void sellQuantity_saleQuantityGreaterThanQuantity_validationExceptionThrown() {
+        testInvItem.setQuantity(100);
+        assertEquals(100, testInvItem.getQuantity());
+        var exception = assertThrows(ValidationResponseException.class, () -> testInvItem.sellQuantity(200));
+        assertEquals("Quantity sold must not be greater than available quantity", exception.getMessage());
+    }
+
+    @Test
+    void sellQuantity_saleQuantityGreaterThanDifferenceBetweenQuantityAndRemainingQuantity_validationExceptionThrown() {
+        testInvItem.setQuantity(100);
+        testInvItem.setRemainingQuantity(50);
+        assertEquals(100, testInvItem.getQuantity());
+        assertEquals(50, testInvItem.getRemainingQuantity());
+        var exception = assertThrows(ValidationResponseException.class, () -> testInvItem.sellQuantity(70));
+        assertEquals("Inventory item quantity cannot be less than remaining quantity", exception.getMessage());
+    }
+
+    @ParameterizedTest
+    @ValueSource(ints = {50, 1, 33})
+    void sellQuantity_saleQuantityNotGreaterThanDifferenceBetweenQuantityAndRemainingQuantity_quantityUpdated(int saleQuantity) {
+        testInvItem.setQuantity(100);
+        testInvItem.setRemainingQuantity(50);
+        assertEquals(100, testInvItem.getQuantity());
+        assertEquals(50, testInvItem.getRemainingQuantity());
+        assertDoesNotThrow(() -> testInvItem.sellQuantity(saleQuantity));
+        assertEquals(100 - saleQuantity, testInvItem.getQuantity());
+        assertEquals(50, testInvItem.getRemainingQuantity());
     }
 }
